# lecto-client-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: client.rs  debt.rs  debt_status.rs  debtor.rs  fixture.rs  lib.rs  remind_group.rs  util.rs
src/remind_group/: remind.rs
test-data/: lecto-remind-groups-reminds.json
