[package]
name = "lecto_client"
version = "0.5.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.3"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "*"
mockito = "*"
assert_matches = "*"
rstest = "*"
chrono-tz = "*"
