[package]
name = "lecto_client"
version = "0.8.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
itertools = "0.10.5"
log = "0.4.18"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "*"
mockito = "*"
assert_matches = "*"
rstest = "*"
chrono-tz = "*"
