[package]
name = "lecto_client"
version = "0.9.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.28", features = ["serde"] }
itertools = "0.10.5"
log = "0.4.20"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "*"
mockito = "*"
assert_matches = "*"
rstest = "*"
chrono-tz = "*"
